2008-11-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	patch by: Sebastian Pölsterl

	* gst/mpegdemux/mpegtsparse.c:
	Fix another memleak.

2008-11-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	patch by: Sebastian Pölsterl

	* gst/mpegdemux/mpegtspacketizer.c:
	* sys/dvb/gstdvbsrc.c:
	Fix memleaks.

2008-11-04  Stefan Kost  <ensonic@users.sf.net>

	* ext/alsaspdif/Makefile.am:
	* ext/amrwb/Makefile.am:
	* ext/apexsink/Makefile.am:
	* ext/arts/Makefile.am:
	* ext/artsd/Makefile.am:
	* ext/audiofile/Makefile.am:
	* ext/audioresample/Makefile.am:
	* ext/bz2/Makefile.am:
	* ext/cdaudio/Makefile.am:
	* ext/celt/Makefile.am:
	* ext/dc1394/Makefile.am:
	* ext/dirac/Makefile.am:
	* ext/directfb/Makefile.am:
	* ext/divx/Makefile.am:
	* ext/dts/Makefile.am:
	* ext/faac/Makefile.am:
	* ext/faad/Makefile.am:
	* ext/gsm/Makefile.am:
	* ext/hermes/Makefile.am:
	* ext/ivorbis/Makefile.am:
	* ext/jack/Makefile.am:
	* ext/jp2k/Makefile.am:
	* ext/ladspa/Makefile.am:
	* ext/lcs/Makefile.am:
	* ext/libfame/Makefile.am:
	* ext/libmms/Makefile.am:
	* ext/metadata/Makefile.am:
	* ext/mpeg2enc/Makefile.am:
	* ext/mplex/Makefile.am:
	* ext/musepack/Makefile.am:
	* ext/musicbrainz/Makefile.am:
	* ext/mythtv/Makefile.am:
	* ext/nas/Makefile.am:
	* ext/neon/Makefile.am:
	* ext/ofa/Makefile.am:
	* ext/polyp/Makefile.am:
	* ext/resindvd/Makefile.am:
	* ext/sdl/Makefile.am:
	* ext/shout/Makefile.am:
	* ext/snapshot/Makefile.am:
	* ext/sndfile/Makefile.am:
	* ext/soundtouch/Makefile.am:
	* ext/spc/Makefile.am:
	* ext/swfdec/Makefile.am:
	* ext/tarkin/Makefile.am:
	* ext/theora/Makefile.am:
	* ext/timidity/Makefile.am:
	* ext/twolame/Makefile.am:
	* ext/x264/Makefile.am:
	* ext/xine/Makefile.am:
	* ext/xvid/Makefile.am:
	* gst-libs/gst/app/Makefile.am:
	* gst-libs/gst/dshow/Makefile.am:
	* gst/aiffparse/Makefile.am:
	* gst/app/Makefile.am:
	* gst/audiobuffer/Makefile.am:
	* gst/bayer/Makefile.am:
	* gst/cdxaparse/Makefile.am:
	* gst/chart/Makefile.am: