@@ -1,3 +1,8 @@
+2008-11-04  Stefan Kost  <ensonic@users.sf.net>
+
+	* gst/modplug/gstmodplug.cc:
+	  Send tag event. Fixes #559286.
+
 2008-11-04  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	patch by: Sebastian Pölsterl
